# libav-rs

./: Cargo.toml  README.md
.github/workflows/: libav.yml
libav-sys/: .gitignore  Cargo.toml  build.rs
libav-sys/data/: libavfilter.h  libavformat.h  libavresample.h
libav-sys/src/: lib.rs
