[package]
name = "libav-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to libav"
repository = "https://github.com/rust-av/libav-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.30"
metadeps = "1.1"

[package.metadata.pkg-config]
libavcodec = "58"
libavformat = "58"

[dependencies]
