[package]
name = "libav-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to libav"
repository = "https://github.com/rust-av/libav-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.30"
system-deps = "1.3"

[package.metadata.system-deps]
libavcodec = "58"
libavformat = "58"
libavfilter = "7.40.101"
libavresample = "4.0.0"
libswresample = "3.3.100"

[dependencies]
